--- a/package.json
+++ b/package.json
@@ -19,21 +19,14 @@
   "dependencies": {
     "axios": "^0.26.1",
     "body-parser": "^1.19.2",
-    "busboy": "^1.5.0",
     "chokidar": "^3.5.3",
     "cors": "^2.8.5",
     "csv-writer": "^1.6.0",
     "decompress-zip": "^0.3.3",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
-    "extract-zip": "^2.0.1",
-    "formidable": "^2.0.1",
     "http-status-codes": "^2.2.0",
-    "morgan": "^1.10.0",
     "mssql": "^8.0.2",
-    "multer": "^1.4.4",
-    "node-fetch": "^3.2.3",
-    "object-sizeof": "^1.6.3",
-    "uuid": "^8.3.2"
+    "multer": "^1.4.4"
   }
 }
